fixed firefox flickering

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -254,14 +254,16 @@ p {
 		-ms-filter:grayscale(100%);
 		-o-filter:grayscale(100%);
 	filter:gray;
-	-webkit-filter:grayscale(1);
+	-webkit-filter:grayscale(100%);
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
 }
 
 .sponsor:hover {
     filter: none;
-		-webkit-filter:grayscale(0);
-		-ms-filter:grayscale(0);
-		-o-filter:grayscale(0);
+		-webkit-filter:grayscale(0%);
+		-ms-filter:grayscale(0%);
+		-o-filter:grayscale(0%);
+	-moz-transform: rotate(0);  /* Fixes Firefox flickering on hover */
 	opacity:1;
 	filter:alpha(opacity=1);
 }
